--- a/src/vs/workbench/browser/parts/editor/media/singleeditortabscontrol.css
+++ b/src/vs/workbench/browser/parts/editor/media/singleeditortabscontrol.css
@@ -19,7 +19,7 @@
 	box-sizing: border-box;
 }
 
-.monaco-workbench.custom-titlebar-hidden.windows .part.editor > .content .editor-group-container > .title > .label-container {
+.monaco-workbench.custom-titlebar-hidden.windows .part.editor > .content .editor-group-container > .title:has(.editor-layout-actions .action-item) > .label-container {
 	padding-right: 138px;
 	box-sizing: border-box;
 }
